# ai-agent

./: .gitignore  agente.py  indexar.py  pyproject.toml
vectorstore/: index.faiss  index.pkl
